examples/failing/OperatorSections.purs
-- @shouldFailWith CannotApplyFunction
module Main where

import Prelude

main = do
  (true `not` _)

